--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ font-family: 'Iceland', cursive;">
     
     <nav class="navbar navbar-light bg-light sticky-top shadow-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="bisleri_images/bisleri.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="Bisleri_images/bisleri.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
