--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ font-family: 'Iceland', cursive;">
             <div class="col-md-5 p-0 m-0">
 
                 <div class="card m-0 p-0">
-                    <img src="Bisleri_images/Bisleri-doorstep_6.jpg" alt="" class="img-fluid w-100 card-img">
+                    <img src="Bisleri_images/Bisleri-doorstep_6.jpg" alt="" class=" w-100 card-img">
                     <div class="card-img-overlay d-flex">
                         <div class="card-img-overlay m-0 p-0" style="opacity:0.4;">
                             <img src="bisleri_images/dark+grey+rectangle.jpg" alt="" class="w-100 h-100 m-0 p-0">
