--- a/index.html
+++ b/index.html
@@ -355,16 +355,16 @@ font-family: 'Iceland', cursive;">
 <div class="col-md-4 text-center p-0 m-0">
 <h4 style="color: turquoise; font-weight: 900; font-size: 33px;">Secure Payment</h4>
         <span>
-<img src="bisleri_Images/visa.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/visa.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_Images/master.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/master.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_Images/paytm.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/paytm.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_Images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
+<img src="Bisleri_Images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
         </span>
 </div>
 
@@ -401,7 +401,7 @@ font-family: 'Iceland', cursive;">
 <span class="col-md-4 text-center p-0">
     <h4 style="color: turquoise; font-weight: 700; font-size: 33px;" class="p-0">Our App</h4>
     <a href="https://play.google.com/store/apps/details?id=com.bisleri.bottleforchange" target="_blank" class="p-0">
-    <img src="bisleri_Images/APP.png" alt="" class="app img-fluid p-2">
+    <img src="Bisleri_Images/APP.png" alt="" class="app img-fluid p-2">
 </a>
 
 </span>
