--- a/about_us.html
+++ b/about_us.html
@@ -55,7 +55,7 @@ font-family: 'Iceland', cursive;">
     <!-- navigation start here -->
     <nav class="navbar navbar-light bg-light sticky-top shadow-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="bisleri_images/bisleri.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="Bisleri_Images/bisleri.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -131,7 +131,7 @@ font-family: 'Iceland', cursive;">
                     Our journey
                 </h1>
 
-                <img src="bisleri_images/1949.png" alt="" width="280px " class="m-auto img-fluid shadow-lg" style="border: 10px solid white; border-radius: 16px;">
+                <img src="Bisleri_Images/1949.png" alt="" width="280px " class="m-auto img-fluid shadow-lg" style="border: 10px solid white; border-radius: 16px;">
                 <p class="text-capatalize text-center justify-content-center">
                     <h1 class="text-center " style="color: turquoise;">
                         <big>From 1949</big>
@@ -155,7 +155,7 @@ font-family: 'Iceland', cursive;">
                     
                 </h1>
 
-                <img src="bisleri_images/2020.jpg" alt="" width="auto" class="m-auto img-fluid shadow-lg" style="border: 10px solid white; border-radius: 16px;">
+                <img src="Bisleri_Images/2020.jpg" alt="" width="auto" class="m-auto img-fluid shadow-lg" style="border: 10px solid white; border-radius: 16px;">
                 <p class="text-capatalize text-center justify-content-center">
                     <h1 class="text-center " style="color: turquoise;">
                         <big>TO Future.</big>
@@ -180,16 +180,16 @@ font-family: 'Iceland', cursive;">
 <div class="col-md-4 text-center p-0 m-0">
 <h4 style="color: turquoise; font-weight: 900; font-size: 33px;">Secure Payment</h4>
         <span>
-<img src="bisleri_images/visa.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/visa.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/master.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/master.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/paytm.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/paytm.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
+<img src="Bisleri_Images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
         </span>
 </div>
 
@@ -226,7 +226,7 @@ font-family: 'Iceland', cursive;">
 <span class="col-md-4 text-center p-0">
     <h4 style="color: turquoise; font-weight: 700; font-size: 33px;" class="p-0">Our App</h4>
     <a href="https://play.google.com/store/apps/details?id=com.bisleri.bottleforchange" target="_blank" class="p-0">
-    <img src="bisleri_images/APP.png" alt="" class="app img-fluid p-2">
+    <img src="Bisleri_Images/APP.png" alt="" class="app img-fluid p-2">
 </a>
 
 </span>
