--- a/about_us.html
+++ b/about_us.html
@@ -48,6 +48,14 @@ font-family: 'Iceland', cursive;">
             overflow-x: hidden;
             background-color: whitesmoke;
         }
+.hov:hover{
+    padding-left: 10px;
+    transition-duration: 0.5s;
+        }
+        .app:hover{
+            transform: scale(1.1);
+            transition-duration: 0.2s;
+        }
 
     </style>
 </head>
