--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,14 @@ font-family: 'Iceland', cursive;">
             overflow-x: hidden;
             background-color: whitesmoke;
         }
+        .hov:hover{
+    padding-left: 10px;
+    transition-duration: 0.5s;
+        }
+        .app:hover{
+            transform: scale(1.1);
+            transition-duration: 0.2s;
+        }
     </style>
 
 </head>
@@ -57,7 +65,7 @@ font-family: 'Iceland', cursive;">
 <body>
     <nav class="navbar navbar-light bg-light sticky-top shadow-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="bisleri_images/bisleri.png" alt="" width="100px"></a>
+            <a class="navbar-brand" href="#"><img src="Bisleri_Images/bisleri.png" alt="" width="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -365,16 +373,16 @@ Chennai, Tamilnadu - 600056
 <div class="col-md-4 text-center p-0 m-0">
 <h4 style="color: turquoise; font-weight: 900; font-size: 33px;">Secure Payment</h4>
         <span>
-<img src="bisleri_images/visa.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/visa.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/master.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/master.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/paytm.png" alt="" width="100px" class="img-fluid app">
+<img src="Bisleri_Images/paytm.png" alt="" width="100px" class="img-fluid app">
         </span>
         <span>
-<img src="bisleri_images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
+<img src="Bisleri_Images/mcsecurity.jpg" alt="" width="100px"  class="img-fluid app">            
         </span>
 </div>
 
@@ -411,7 +419,7 @@ Chennai, Tamilnadu - 600056
 <span class="col-md-4 text-center p-0">
     <h4 style="color: turquoise; font-weight: 700; font-size: 33px;" class="p-0">Our App</h4>
     <a href="https://play.google.com/store/apps/details?id=com.bisleri.bottleforchange" target="_blank" class="p-0">
-    <img src="bisleri_images/APP.png" alt="" class="app img-fluid p-2">
+    <img src="Bisleri_Images/APP.png" alt="" class="app img-fluid p-2">
 </a>
 
 </span>
