--- a/contact.html
+++ b/contact.html
@@ -148,12 +148,12 @@ font-family: 'Iceland', cursive;">
         </div>
         <div class="col-12 text-center">
             <i class="fa fa-phone-square-alt"></i>
-            Give A Miss Call- <br><a href="telto:+1800-121-1007">+1800-121-1007</a>
+            Give A Miss Call- <br><a href="tel:+1800-121-1007">+1800-121-1007</a>
             <hr class="navbar-divider">
         </div>
         <div class="col-12 text-center">
             <i class="fa fa-tty"></i>
-            Toll Free Number- <br><a href="telto:+1800-121-1007">+1800-121-1007</a>
+            Toll Free Number- <br><a href="tel:+1800-121-1007">+1800-121-1007</a>
         </div>
     </div>
     </div>
