--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ font-family: 'Iceland', cursive;">
                     <img src="Bisleri_Images/123.jpg" alt="" class="img-fluid w-100 card-img m-0 p-0">
                     <div class="card-img-overlay d-flex">
                         <div class="card-img-overlay m-0 p-0" style="opacity: 0.3;">
-                            <img src="bisleri_Images/black.jpg" alt="" class="w-100 h-100">
+                            <img src="Bisleri_Images/black.jpg" alt="" class="w-100 h-100">
                         </div>
                     </div>
 
@@ -208,7 +208,7 @@ font-family: 'Iceland', cursive;">
                     <img src="Bisleri_Images/Bisleri-doorstep_6.jpg" alt="" class=" w-100 card-img">
                     <div class="card-img-overlay d-flex">
                         <div class="card-img-overlay m-0 p-0" style="opacity:0.4;">
-                            <img src="bisleri_Images/dark+grey+rectangle.jpg" alt="" class="w-100 h-100 m-0 p-0">
+                            <img src="Bisleri_Images/dark+grey+rectangle.jpg" alt="" class="w-100 h-100 m-0 p-0">
                         </div>
                         <div
                             class="card-img-overlay card-title display-6 p-2 text-decoration-underline text-white font-weight-bolder  d-flex">
